--- a/src/app/shared/copy-or-email-link-join/style/copy-or-email-link.less
+++ b/src/app/shared/copy-or-email-link-join/style/copy-or-email-link.less
@@ -1,10 +1,10 @@
-copy-or-email-link {
+app-copy-or-email-link-join {
     .default-input {
         padding-right: 35px;
     }
 
     .dropdown-options {
-        ie-fix {
+        .ie-fix {
             width: 36px;
             height: 36px;
             margin-left: -36px;
