--- a/src/app/shared/copy-or-email-link-join/style/desktop-copy-or-email-link.less
+++ b/src/app/shared/copy-or-email-link-join/style/desktop-copy-or-email-link.less
@@ -3,7 +3,7 @@ copy-or-email-link {
         padding-right: 29px;
     }
 
-    .dropdown-options ie-fix {
+    .dropdown-options .ie-fix {
         margin-left: -30px;
         width: 30px;
         height: 30px;
