--- a/src/app/shared/join-input/join-input.component.less
+++ b/src/app/shared/join-input/join-input.component.less
@@ -87,7 +87,7 @@
           }
         }
 
-        copy-or-email-link-join{
+        app-copy-or-email-link-join{
 
           &.inactive {
             pointer-events: none;
@@ -105,7 +105,7 @@
 
             .dropdown-options{
 
-              ie-fix {
+              .ie-fix {
                 width: 30px;
                 height: 30px;
                 margin-left: 0px;
