--- a/src/assets/styles/desktop-utility.less
+++ b/src/assets/styles/desktop-utility.less
@@ -40,7 +40,7 @@
         bottom: auto;
 
         // it is not applicable for <copy-or-email-link> tags
-        :not(.input-wrapper) > .dropdown-options div:empty+ie-fix {
+        :not(.input-wrapper) > .dropdown-options div:empty+.ie-fix {
             border-radius: 0;
             background: transparent;
             padding: 20px;
