--- a/src/app/components/join/styles/desktop-view-join.less
+++ b/src/app/components/join/styles/desktop-view-join.less
@@ -26,7 +26,7 @@
                 }
             }
 
-            .input-wrapper .dropdown-options ie-fix {
+            .input-wrapper .dropdown-options .ie-fix {
                 width: 30px;
                 height: 30px;
             }
@@ -94,6 +94,7 @@
             margin-bottom: 60px;
             flex: 0 0 auto;
             z-index: 1;
+          height: auto;
 
             & > li {
                 line-height: normal;
